[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sound/SoundPlayer.gd" type="Script" id=1]
[ext_resource path="res://Sound/grass_rustle3.ogg" type="AudioStream" id=2]
[ext_resource path="res://Sound/grass_rustle1.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sound/grass_rustle2.ogg" type="AudioStream" id=4]

[node name="SoundPlayer" type="Node2D"]
script = ExtResource( 1 )

[node name="GrassPlayers" type="Node" parent="."]

[node name="Grass1" type="AudioStreamPlayer2D" parent="GrassPlayers"]
stream = ExtResource( 3 )

[node name="Grass2" type="AudioStreamPlayer2D" parent="GrassPlayers"]
stream = ExtResource( 4 )

[node name="Grass3" type="AudioStreamPlayer2D" parent="GrassPlayers"]
stream = ExtResource( 2 )
